apps/gymbros/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gymbros-backend
  namespace: gymbros
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gymbros-backend
  template:
    metadata:
      labels:
        app: gymbros-backend
    spec:
      containers:
        - name: backend
          image: chrisgthomsen/gymbros-backend:7484934386563a6b11102a912355476e1d74bbff
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: gymbros-backend
  namespace: gymbros
spec:
  selector:
    app: gymbros-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
