apps/gymbros/database.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gymbros-db
  namespace: gymbros
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gymbros-db
  template:
    metadata:
      labels:
        app: gymbros-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: gymbros-db
  namespace: gymbros
spec:
  selector:
    app: gymbros-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
