apps/gymbros/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gymbros-frontend-route
  namespace: gymbros
spec:
  parentRefs:
    - name: gymbros-gateway
      namespace: gymbros
      sectionName: http
  hostnames:
    - "158.180.42.198.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/acme-challenge/
      backendRefs:
        - name: cm-acme-http-solver
          namespace: gymbros
          port: 8089
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gymbros-frontend
          namespace: gymbros
          port: 80
